<resources>
    <string name="app_name">Sermo_Android</string>
    <string name="preference_file_key">com.sermo.sermo_android.PREFERENCE_FILE_KEY</string>
    <string name="userId">userId</string>
    <string name="token">JWTToken</string>

    <string name="Firebase">FirebaseToken</string>
    <string name="channel_name">Messages</string>
    <string name="channel_description">Sermo app messages</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="prompt_nickname">Nickname</string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_Register">register </string>
    <string name="action_addContact">new contact</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="channel_intent">com.sermo.broadcast.NEW_MESSAGE</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="new_server">New Server</string>
    <string name="update">Update</string>
    <string name="switch_theme">Switch Theme</string>
    <string name="userServer" />
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>